# wassima

./: .coveragerc  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  MANIFEST.in  NOTICE  README.md  freethreaded.patch  noxfile.py  pyproject.fb.toml  pyproject.toml  requirements-dev.txt
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: CI.yml  SYNC.yml  codeql.yml  scorecards.yml
src/: lib.rs
src/wassima/: __init__.py  _version.py  utils.py
src/wassima/_os/: __init__.py  _embed.py  _linux.py  _macos.py  _windows.py
tests/: test_crl.py  test_ctx.py  test_unit.py
wassima/: __init__.py  __main__.py  _rustls.pyi  _version.py  wassima.pyi
wassima/_os/: __init__.py  _embed.py  _linux.py  _macos.py  _windows.py
