[package]
name = "wassima"
version = "1.1.6"
edition = "2021"

[lib]
name = "wassima"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["abi3-py37", "extension-module", "generate-import-lib"] }
rustls-native-certs = "0.7.3"

[package.metadata.maturin]
python-source = "wassima"
