[package]
name = "wassima"
version = "1.2.2"
edition = "2021"

[lib]
name = "wassima"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.4", features = ["abi3-py37", "extension-module", "generate-import-lib"] }
rustls-native-certs = "0.8.1"

[package.metadata.maturin]
python-source = "wassima"
